{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 38,
  "lineage": "5fe44b86-c0c5-bec7-372f-1fbbf868d41f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-054ba49bf2c3d0e7d",
            "domain": "vpc",
            "id": "eipalloc-0aeca7c133966ede3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01c80c9eb1c0167a7",
            "private_dns": "ip-10-20-1-225.ec2.internal",
            "private_ip": "10.20.1.225",
            "public_dns": "ec2-184-72-186-210.compute-1.amazonaws.com",
            "public_ip": "184.72.186.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natGatewayEip",
              "build": "1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:051776933652:instance/i-09627b6278f8dabd9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-profile",
            "id": "i-09627b6278f8dabd9",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "bastion_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06bc6837ce322e9fa",
            "private_dns": "ip-10-20-0-4.ec2.internal",
            "private_ip": "10.20.0.4",
            "public_ip": "3.89.186.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0384c004ad7a25abf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03fe9de0dcf27a7a0",
            "tags": {
              "Name": "Bastion",
              "build": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8dd73683653f208"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_key_pair.bastion_key_pair",
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:051776933652:instance/i-0b6fe2331c84f771a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-profile",
            "id": "i-0b6fe2331c84f771a",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "bastion_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a81e0f563ffd19da",
            "private_dns": "ip-10-20-1-240.ec2.internal",
            "private_ip": "10.20.1.240",
            "public_ip": "54.144.88.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-051b5b04ed500be40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005941fa4cecf88f6",
            "tags": {
              "Name": "Web-Server",
              "build": "1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-016e4950737b41300"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_key_pair.bastion_key_pair",
            "aws_security_group.web_sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:internet-gateway/igw-0ad5495e9a2c2d448",
            "id": "igw-0ad5495e9a2c2d448",
            "owner_id": "051776933652",
            "tags": {
              "Name": "igw",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aeca7c133966ede3",
            "id": "nat-011b7d7f17e815e6e",
            "network_interface_id": "eni-01c80c9eb1c0167a7",
            "private_ip": "10.20.1.225",
            "public_ip": "184.72.186.210",
            "subnet_id": "subnet-005941fa4cecf88f6",
            "tags": {
              "Name": "natGateway",
              "build": "1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:network-acl/acl-00944642b8a9b4a58",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 9100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 9000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 8000,
                "to_port": 0
              }
            ],
            "id": "acl-00944642b8a9b4a58",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 9100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 9000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 8000,
                "to_port": 0
              }
            ],
            "owner_id": "051776933652",
            "subnet_ids": [
              "subnet-04420249e68dfbe74",
              "subnet-0cc4500cce3814f3e"
            ],
            "tags": {
              "Name": "private-nacl",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:network-acl/acl-0ddd09a767e9559cb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 9100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 9000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 8000,
                "to_port": 0
              }
            ],
            "id": "acl-0ddd09a767e9559cb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 9100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1025,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 9000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.20.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 8000,
                "to_port": 0
              }
            ],
            "owner_id": "051776933652",
            "subnet_ids": [
              "subnet-005941fa4cecf88f6",
              "subnet-00727fddb941ece89"
            ],
            "tags": {
              "Name": "web-nacl",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0289cb5464622b4a9",
            "owner_id": "051776933652",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011b7d7f17e815e6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateRouteTable",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e2e5858e0b3b6e33",
            "owner_id": "051776933652",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad5495e9a2c2d448",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ba68ad9da1cf474",
            "route_table_id": "rtb-0e2e5858e0b3b6e33",
            "subnet_id": "subnet-03fe9de0dcf27a7a0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7ee26bf699ce2d9",
            "route_table_id": "rtb-0289cb5464622b4a9",
            "subnet_id": "subnet-0290774a1601a1c37"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.db",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1ed6fb9e9197f27",
            "route_table_id": "rtb-0289cb5464622b4a9",
            "subnet_id": "subnet-087101829cf55e8cf"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.db",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053327d403ea0dcde",
            "route_table_id": "rtb-0289cb5464622b4a9",
            "subnet_id": "subnet-04420249e68dfbe74"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af4801f175e461f4",
            "route_table_id": "rtb-0289cb5464622b4a9",
            "subnet_id": "subnet-0cc4500cce3814f3e"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047034c60e06f0419",
            "route_table_id": "rtb-0e2e5858e0b3b6e33",
            "subnet_id": "subnet-005941fa4cecf88f6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01958a5fc83677217",
            "route_table_id": "rtb-0e2e5858e0b3b6e33",
            "subnet_id": "subnet-00727fddb941ece89"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:security-group/sg-0c8dd73683653f208",
            "description": "Allow SSH, HTTP(S) and intra VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0c8dd73683653f208",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_SSH_HTTPS_Other",
            "name_prefix": "",
            "owner_id": "051776933652",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-security-group",
              "build": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:security-group/sg-0a044d644bf7458aa",
            "description": "allow-internal-traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a044d644bf7458aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-internal-traffic",
            "name_prefix": "",
            "owner_id": "051776933652",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_vpc",
              "build": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:security-group/sg-016e4950737b41300",
            "description": "Allow HTTP(S) and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-016e4950737b41300",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_HTTP(S) and SSH",
            "name_prefix": "",
            "owner_id": "051776933652",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-security-group",
              "build": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:subnet/subnet-03fe9de0dcf27a7a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.0.0/24",
            "id": "subnet-03fe9de0dcf27a7a0",
            "map_public_ip_on_launch": false,
            "owner_id": "051776933652",
            "tags": {
              "Name": "Bastion-Subnet",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:subnet/subnet-0290774a1601a1c37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.5.0/24",
            "id": "subnet-0290774a1601a1c37",
            "map_public_ip_on_launch": false,
            "owner_id": "051776933652",
            "tags": {
              "Name": "DB-Subnet-1",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:subnet/subnet-087101829cf55e8cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.6.0/24",
            "id": "subnet-087101829cf55e8cf",
            "map_public_ip_on_launch": false,
            "owner_id": "051776933652",
            "tags": {
              "Name": "DB-Subnet-2",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:subnet/subnet-04420249e68dfbe74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-04420249e68dfbe74",
            "map_public_ip_on_launch": false,
            "owner_id": "051776933652",
            "tags": {
              "Name": "Int-Subnet-1",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:subnet/subnet-0cc4500cce3814f3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-0cc4500cce3814f3e",
            "map_public_ip_on_launch": false,
            "owner_id": "051776933652",
            "tags": {
              "Name": "Int-Subnet-2",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:subnet/subnet-005941fa4cecf88f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-005941fa4cecf88f6",
            "map_public_ip_on_launch": false,
            "owner_id": "051776933652",
            "tags": {
              "Name": "Ext-Subnet-1",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:subnet/subnet-00727fddb941ece89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-00727fddb941ece89",
            "map_public_ip_on_launch": false,
            "owner_id": "051776933652",
            "tags": {
              "Name": "Ext-Subnet-2",
              "build": "1"
            },
            "vpc_id": "vpc-049478ef283d9bf50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051776933652:vpc/vpc-049478ef283d9bf50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-09b2a899e1a1b393c",
            "default_route_table_id": "rtb-0fea8ba7964669549",
            "default_security_group_id": "sg-09557fe0faecc5dd1",
            "dhcp_options_id": "dopt-c1b8c4bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-049478ef283d9bf50",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fea8ba7964669549",
            "owner_id": "051776933652",
            "tags": {
              "Name": "vpc-1",
              "build": "1"
            }
          }
        }
      ]
    }
  ]
}